# plasma-mobile-app-template

./: CMakeLists.txt  Messages.sh  README.md  org.kde.%{APPNAMELC}.appdata.xml  org.kde.%{APPNAMELC}.desktop  org.kde.%{APPNAMELC}.json  org.kde.hellokirigami.appdata.xml  org.kde.hellokirigami.json  plasma-mobile.kdevtemplate
src/: CMakeLists.txt  main.cpp
